# pgrsem

./: CMakeLists.txt  Camera.cpp  Camera.h  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  help.cpp  main.cpp  pgrsem.cpp  scene.json  simple-fs.glsl  utility.cpp  utility.h
framework/: pgrsem.sln  pgrsem.vcxproj
header/: camera.h  data.h  game_object.h  globals.h  init.h  lights.h  mesh.h  model.h  scene.h  scene_object.h  shader.h  sky_box.h  sky_dome.h  utility.h
lib/glad/src/: glad.c
noframework/: CMakeLists.txt  Camera.cpp  GameObject.cpp  fragment_shader.frag  main.cpp  vertex_shader.vert
noframework/lib/glad/include/glad/: glad.h
resources/models/ball/: ball.mtl
resources/models/bubububu/: pgr_mesh.cpp  pgr_mesh.h
resources/models/chain/: chain.mtl
resources/models/chuliganBouldrovy/: rockBuddy.mtl
resources/models/crystals/: crystal1.mtl  crystal2.mtl  crystal3.mtl  crystal4.mtl  crystals.blend
resources/models/fire/: fire.mtl  fireb.mtl
resources/models/garden-gazebo/: gazebo.mtl
resources/models/gazebo/: gazebo.mtl
resources/models/gazebo1/: gazebo.mtl
resources/models/gazebo1/source/: Gazebo.fbx
resources/models/gazebo2/source/: GazeboWithProps_01.fbx
resources/models/help/: water.mtl  watershaped.blend  watershapedsmaller.mtl
resources/models/landscape/: landscape.mtl
resources/models/myisland/: mats.txt  myisland.blend  myisland.mtl  myislandsharp.blend  myislandsmooth.blend  myislandsmooth.blend1  myislandsmooth.mtl
resources/models/mytower/: Japanese_Temple_Blender.mtl  mytower.blend  mytower.blend1  tower.blend
resources/models/torch/: torch.mtl
resources/models/tower/: tower.mtl
resources/models/trees/: tree1.mtl  tree2.mtl  tree3.mtl  tree4.mtl  trees.blend  trees.blend1
resources/models/trees/low-polly-trees/source/: LowPollyTrees.fbx
resources/models/water/: watershaped.blend
shaders/: animTexture.frag  animTexture.vert  crystal.frag  crystal.vert  fragment_shader.frag  picking.frag  picking.vert  skyDome.frag  skyDome.vert  vertex_shader.vert  water.frag  water.vert
src/: camera.cpp  game_object.cpp  init.cpp  lights.cpp  mesh.cpp  model.cpp  scene.cpp  scene_object.cpp  shader.cpp  sky_box.cpp  sky_dome.cpp  utility.cpp
